// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotLayout: computedAmazonView 1`] = `
{
  "edges": [
    {
      "headArrow": [
        [
          166,
          320,
        ],
        [
          163,
          330,
        ],
        [
          160,
          320,
        ],
      ],
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labelBox": {
        "align": "center",
        "width": 116,
        "x": 221,
        "y": 259,
      },
      "parent": null,
      "points": [
        [
          163,
          208,
        ],
        [
          163,
          243,
        ],
        [
          163,
          285,
        ],
        [
          163,
          321,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon.s3",
    },
  ],
  "height": 509,
  "id": "amazon",
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "navigateTo": "cloud3levels",
      "parent": null,
      "position": [
        11,
        11,
      ],
      "relative": [
        11,
        11,
      ],
      "shape": "rectangle",
      "size": {
        "height": 223,
        "width": 304,
      },
      "title": "cloud",
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "id": "amazon",
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        11,
        275,
      ],
      "relative": [
        11,
        275,
      ],
      "shape": "rectangle",
      "size": {
        "height": 223,
        "width": 304,
      },
      "title": "amazon",
    },
    {
      "children": [],
      "color": "primary",
      "id": "amazon.s3",
      "parent": "amazon",
      "position": [
        37,
        331,
      ],
      "relative": [
        26,
        56,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "s3",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "parent": "cloud",
      "position": [
        37,
        68,
      ],
      "relative": [
        26,
        57,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "backend",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud",
          "isDescedants": false,
        },
        {
          "source": {
            "element": "cloud",
            "isDescedants": true,
          },
          "target": {
            "element": "amazon",
            "isDescedants": false,
          },
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "amazon",
  "width": 326,
}
`;

exports[`dotLayout: computedCloud3levels 1`] = `
{
  "edges": [
    {
      "headArrow": [
        [
          340,
          650,
        ],
        [
          330,
          647,
        ],
        [
          340,
          644,
        ],
      ],
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "labelBox": null,
      "parent": "cloud.backend",
      "points": [
        [
          488,
          647,
        ],
        [
          439,
          647,
        ],
        [
          389,
          647,
        ],
        [
          340,
          647,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "headArrow": [
        [
          532,
          566,
        ],
        [
          536,
          575,
        ],
        [
          527,
          571,
        ],
      ],
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labelBox": {
        "align": "center",
        "width": 88,
        "x": 503,
        "y": 486,
      },
      "parent": "cloud",
      "points": [
        [
          362,
          417,
        ],
        [
          412,
          462,
        ],
        [
          478,
          522,
        ],
        [
          530,
          570,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          618,
          566,
        ],
        [
          614,
          575,
        ],
        [
          611,
          566,
        ],
      ],
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labelBox": {
        "align": "left",
        "width": 176,
        "x": 619,
        "y": 467,
      },
      "parent": "cloud",
      "points": [
        [
          616,
          417,
        ],
        [
          615,
          461,
        ],
        [
          615,
          520,
        ],
        [
          615,
          566,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          206,
          839,
        ],
        [
          203,
          848,
        ],
        [
          200,
          839,
        ],
      ],
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labelBox": {
        "align": "center",
        "width": 116,
        "x": 261,
        "y": 809,
      },
      "parent": null,
      "points": [
        [
          203,
          718,
        ],
        [
          203,
          754,
        ],
        [
          203,
          800,
        ],
        [
          203,
          839,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          620,
          265,
        ],
        [
          616,
          274,
        ],
        [
          613,
          265,
        ],
      ],
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labelBox": {
        "align": "center",
        "width": 66,
        "x": 649,
        "y": 191,
      },
      "parent": null,
      "points": [
        [
          616,
          141,
        ],
        [
          616,
          179,
        ],
        [
          616,
          226,
        ],
        [
          616,
          265,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "headArrow": [
        [
          289,
          265,
        ],
        [
          286,
          274,
        ],
        [
          283,
          265,
        ],
      ],
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labelBox": {
        "align": "center",
        "width": 122,
        "x": 347,
        "y": 191,
      },
      "parent": null,
      "points": [
        [
          286,
          141,
        ],
        [
          286,
          179,
        ],
        [
          286,
          226,
        ],
        [
          286,
          265,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
  ],
  "height": 990,
  "id": "cloud3levels",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "parent": null,
      "position": [
        160,
        0,
      ],
      "relative": [
        160,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "support",
      "parent": null,
      "position": [
        490,
        0,
      ],
      "relative": [
        490,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "support",
    },
    {
      "children": [],
      "color": "primary",
      "id": "amazon",
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        77,
        850,
      ],
      "relative": [
        77,
        850,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "amazon",
    },
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "navigateTo": "cloud3levels",
      "parent": null,
      "position": [
        11,
        206,
      ],
      "relative": [
        11,
        206,
      ],
      "shape": "rectangle",
      "size": {
        "height": 578,
        "width": 795,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend.adminPanel",
      "parent": "cloud",
      "position": [
        490,
        276,
      ],
      "relative": [
        479,
        70,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "adminPanel",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend.dashboard",
      "parent": "cloud",
      "position": [
        160,
        276,
      ],
      "relative": [
        149,
        70,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "dashboard",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "id": "cloud.backend",
      "parent": "cloud",
      "position": [
        51,
        520,
      ],
      "relative": [
        40,
        314,
      ],
      "shape": "rectangle",
      "size": {
        "height": 224,
        "width": 715,
      },
      "title": "backend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend.graphql",
      "parent": "cloud.backend",
      "position": [
        488,
        577,
      ],
      "relative": [
        437,
        57,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "graphql",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend.storage",
      "parent": "cloud.backend",
      "position": [
        77,
        577,
      ],
      "relative": [
        26,
        57,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "storage",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud.frontend",
          "isDescedants": true,
        },
        {
          "element": "cloud.backend",
          "isDescedants": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud.frontend",
          "isDescedants": false,
        },
      ],
      "isInclude": false,
    },
  ],
  "title": "",
  "viewOf": "cloud",
  "width": 816,
}
`;

exports[`dotLayout: computedCloudView 1`] = `
{
  "edges": [
    {
      "headArrow": [
        [
          300,
          336,
        ],
        [
          290,
          333,
        ],
        [
          300,
          330,
        ],
      ],
      "id": "cloud.frontend:cloud.backend",
      "label": null,
      "labelBox": null,
      "parent": "cloud",
      "points": [
        [
          448,
          333,
        ],
        [
          399,
          333,
        ],
        [
          349,
          333,
        ],
        [
          300,
          333,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "headArrow": [
        [
          166,
          484,
        ],
        [
          163,
          493,
        ],
        [
          160,
          484,
        ],
      ],
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labelBox": {
        "align": "center",
        "width": 116,
        "x": 221,
        "y": 455,
      },
      "parent": null,
      "points": [
        [
          163,
          403,
        ],
        [
          163,
          429,
        ],
        [
          163,
          458,
        ],
        [
          163,
          484,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          626,
          255,
        ],
        [
          618,
          261,
        ],
        [
          620,
          252,
        ],
      ],
      "id": "support:cloud.frontend",
      "label": "manages",
      "labelBox": {
        "align": "center",
        "width": 66,
        "x": 704,
        "y": 191,
      },
      "parent": null,
      "points": [
        [
          695,
          141,
        ],
        [
          673,
          176,
        ],
        [
          646,
          218,
        ],
        [
          623,
          254,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          528,
          252,
        ],
        [
          530,
          261,
        ],
        [
          522,
          255,
        ],
      ],
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labelBox": {
        "align": "center",
        "width": 122,
        "x": 548,
        "y": 191,
      },
      "parent": null,
      "points": [
        [
          453,
          141,
        ],
        [
          475,
          176,
        ],
        [
          501,
          218,
        ],
        [
          524,
          254,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
  ],
  "height": 635,
  "id": "cloudView",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "parent": null,
      "position": [
        282,
        0,
      ],
      "relative": [
        282,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "support",
      "parent": null,
      "position": [
        613,
        0,
      ],
      "relative": [
        613,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "support",
    },
    {
      "children": [],
      "color": "primary",
      "id": "amazon",
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        37,
        495,
      ],
      "relative": [
        37,
        495,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "amazon",
    },
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "navigateTo": "cloud3levels",
      "parent": null,
      "position": [
        11,
        206,
      ],
      "relative": [
        11,
        206,
      ],
      "shape": "rectangle",
      "size": {
        "height": 224,
        "width": 715,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend",
      "parent": "cloud",
      "position": [
        448,
        263,
      ],
      "relative": [
        437,
        57,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "parent": "cloud",
      "position": [
        37,
        263,
      ],
      "relative": [
        26,
        57,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "backend",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "cloud",
  "width": 864,
}
`;

exports[`dotLayout: computedIndexView 1`] = `
{
  "edges": [
    {
      "headArrow": [
        [
          349,
          224,
        ],
        [
          341,
          230,
        ],
        [
          344,
          221,
        ],
      ],
      "id": "support:cloud",
      "label": "manages",
      "labelBox": {
        "align": "center",
        "width": 66,
        "x": 411,
        "y": 191,
      },
      "parent": null,
      "points": [
        [
          406,
          141,
        ],
        [
          388,
          167,
        ],
        [
          366,
          196,
        ],
        [
          347,
          223,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          238,
          221,
        ],
        [
          241,
          230,
        ],
        [
          233,
          224,
        ],
      ],
      "id": "customer:cloud",
      "label": "opens in browser",
      "labelBox": {
        "align": "center",
        "width": 122,
        "x": 275,
        "y": 191,
      },
      "parent": null,
      "points": [
        [
          176,
          141,
        ],
        [
          195,
          167,
        ],
        [
          216,
          196,
        ],
        [
          235,
          223,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          294,
          452,
        ],
        [
          291,
          461,
        ],
        [
          288,
          452,
        ],
      ],
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labelBox": {
        "align": "center",
        "width": 116,
        "x": 349,
        "y": 422,
      },
      "parent": null,
      "points": [
        [
          291,
          372,
        ],
        [
          291,
          397,
        ],
        [
          291,
          426,
        ],
        [
          291,
          452,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "target": "amazon",
    },
  ],
  "height": 603,
  "id": "index",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "parent": null,
      "position": [
        0,
        0,
      ],
      "relative": [
        0,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "support",
      "parent": null,
      "position": [
        330,
        0,
      ],
      "relative": [
        330,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "support",
    },
    {
      "children": [],
      "color": "primary",
      "id": "amazon",
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        165,
        463,
      ],
      "relative": [
        165,
        463,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "amazon",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud",
      "navigateTo": "cloud3levels",
      "parent": null,
      "position": [
        165,
        232,
      ],
      "relative": [
        165,
        232,
      ],
      "shape": "rectangle",
      "size": {
        "height": 140,
        "width": 251,
      },
      "title": "cloud",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "width": 582,
}
`;
